@@ -120,6 +120,7 @@ Summarise Changes
 #318:Flac, handle image pictures where the data length is greater than recorded in header
 #320:Wav code for checking incorrectly aligned 'id3 ' chunks incorrectly assumes the following/precding byte will be null
 #321:Ensure that when reading an mp4 box header, we have at least enough data in the file to actually read the header, if there is less data, ignore it and log a warning.
+#322:Problems writing metadata for DSF files larger than 2GB
 
 2.2.5
 #033:Added getAudioStartPos() and getAudioEndPos() methods to AudioHeader interface and implemented for most formats
